[tool.poetry]
name = "pytorch-hebbian"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_hebbian"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorboard = "^2.13.0"
pytorch-ignite = "^0.4.12"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pillow = "^9.5.0"
scikit-image = "^0.21.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
wrapt = "^1.15.0"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
